--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ Django==5.2.1
 django-cors-headers==4.7.0
 djangorestframework==3.16.0
 GDAL==3.8.4
+gunicorn==23.0.0
 networkx==3.4.1
 numpy==2.2.6
 psycopg2==2.9.10
